--- a/trunk/ressourcen/plugins/webinterface/reconnect.tmpl
+++ b/trunk/ressourcen/plugins/webinterface/reconnect.tmpl
@@ -12,12 +12,12 @@
 <body>
 
 <div id="message">
-<A  href="/index.tmpl" name="Wait 10 seconds or Click here" target="_self">Restarting JD ... (Wait <span id="countdown">10</span> seconds or click here)</A>
+<A  href="/index.tmpl" name="Wait 30 seconds or Click here" target="_self">Manual Reconnect ... (Wait <span id="countdown">30</span> seconds or click here)</A>
 </div>
 
 <script language="javascript">
 <!--
-countdown(10, 'countdown');
+countdown(30, 'countdown');
 // -->
 </script>
 
